[package]
name = "chat_lambda"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lambda_runtime = "0.4.1"
lambda_http = "0.4.1"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
hyper = "0.14"
hyper-tls = "0.5"
log = "0.4"
simple_logger = "1.0"
dotenv = "0.15"

[features]
# Define any features required for your project. For example:
default = []