[package]
name = "chat_lambda"
version = "0.1.0"
edition = "2018"

[dependencies]
lambda_runtime = "0.8.3"
lambda_http = "0.8.3"
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hyper = "0.14"
hyper-tls = "0.5"
log = "0.4"
simple_logger = "4.2.0"
dotenv = "0.15"
aws-sdk-dynamodb = { version = "0.13.0", features = ["rustls"] } # Adjust the version as necessary
aws-config = "0.57.1"

# Optional dependencies
# sled = "0.34.7" # Include this only if you're using sled in your project

[features]
default = []
